--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.15.2",
+		"dotenv": "^8.2.0",
 		"express": "^4.12.4",
-		"body-parser": "^1.15.2"
+		"mongodb": "^3.3.4",
+		"mongoose": "^5.7.10"
 	},
 	"engines": {
-		"node": "4.4.5"
+		"node": "13.1.0"
 	},
 	"repository": {
 		"type": "git",
